添加车享账户在线支付支持

--- a/payment/profiles/product/application.properties
+++ b/payment/profiles/product/application.properties
@@ -5,9 +5,9 @@ logging.file=../logs/cxpay.log
 async_notice.ip=10.100.161.107
 async_notice.port=8882
 
-#¶àÓÃÍ¾¿¨Ç°ÎåÎ»
+#å¤šç”¨é€”å¡å‰äº”ä½
 CXF_CARDBIN=95020,91302,90302,90304,91304,96020,98888,96021
-#ÌØÊâÓÃÍ¾¿¨Ç°ÎåÎ»
+#ç‰¹æ®Šç”¨é€”å¡å‰äº”ä½
 SPECIAL_CARDBIN=90888
-#¶àÓÃÍ¾ÊÜÀíµØÇøµÄµØÇøÂë
+#å¤šç”¨é€”å—ç†åœ°åŒºçš„åœ°åŒºç 
 MULTI_AREA_CODE=36,18,88,79
