--- a/payment/pom.xml
+++ b/payment/pom.xml
@@ -37,11 +37,11 @@
             <scope>test</scope>
         </dependency>
 
-        <dependency>
+        <!--dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
             <version>RELEASE</version>
-        </dependency>
+        </dependency-->
 
         <dependency>
             <groupId>junit</groupId>
@@ -59,7 +59,7 @@
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
-            <version>3.0.1</version>
+            <version>3.1.0</version>
         </dependency>
 
         <!--spring context -->
