--- a/SQConsole/src/SysParam.properties
+++ b/SQConsole/src/SysParam.properties
@@ -144,10 +144,14 @@ CERTID=\u8bc1\u4e66ID
 SIGNATURE=\u7b7e\u540d
 #\u7b7e\u540d\u65b9\u6cd5
 SIGNMETHOD=\u7b7e\u540d\u65b9\u6cd5
-#\u6536\u4ed8\u6b3e\u65b9\u8d26\u53f7
-PAYEEACCTNO=\u6536\u4ed8\u6b3e\u65b9\u8d26\u53f7
-#\u6536\u4ed8\u6b3e\u65b9\u8d26\u6237\u540d\u79f0
-PAYEEACCTNAME=\u6536\u4ed8\u6b3e\u65b9\u8d26\u6237\u540d\u79f0
+#\u6536\u6b3e\u65b9\u8d26\u53f7
+PAYEEACCTNO=00003002203201102020000000000082
+#\u6536\u6b3e\u65b9\u8d26\u6237\u540d\u79f0
+PAYEEACCTNAME=\u4e0a\u6d77\u5bcc\u53cb\u8d26\u62371
+#\u4ed8\u6b3e\u65b9\u8d26\u53f7
+PAYERACCTNO=00003002203201102020000000000090
+#\u4ed8\u6b3e\u65b9\u8d26\u6237\u540d\u79f0
+PAYERACCTNAME=\u4e0a\u6d77\u5bcc\u53cb\u81ea\u6709\u8d26\u6237
 #\u865a\u62df\u8d26\u53f7
 ACCTNO=\u865a\u62df\u8d26\u53f7
 #\u865a\u62df\u8d26\u6237\u540d\u79f0
