反洗钱改造加字段企业规模

--- a/SQConsole/src/SysParam.properties
+++ b/SQConsole/src/SysParam.properties
@@ -132,32 +132,16 @@ DBTNAM=\u4ed8\u65b9\u5e10\u6237\u540d
 #\u4ed8\u65b9\u5ba2\u6237\u5173\u7cfb\u53f7
 DBTREL=\u4ed8\u65b9\u5ba2\u6237\u5173\u7cfb\u53f7
 
-#\u540e\u53f0\u901a\u77e5\u5730\u5740
-BACKURL=\u540e\u53f0\u901a\u77e5\u5730\u5740
 #\u673a\u6784\u4ee3\u7801
-ACQINSCODE=12345
-#\u5934\u5bf8\u5e8f\u53f7
-INSSEQ=\u5934\u5bf8\u5e8f\u53f7
-#\u8bc1\u4e66ID
-CERTID=\u8bc1\u4e66ID
-#\u7b7e\u540d
-SIGNATURE=\u7b7e\u540d
-#\u7b7e\u540d\u65b9\u6cd5
-SIGNMETHOD=\u7b7e\u540d\u65b9\u6cd5
+ACQINSCODE=49984210
 #\u6536\u6b3e\u65b9\u8d26\u53f7
-PAYEEACCTNO=00003002203201102020000000000082
+PAYEEACCTNO=0000300000000349
+#PAYEEACCTNO=0000300000000348
 #\u6536\u6b3e\u65b9\u8d26\u6237\u540d\u79f0
-PAYEEACCTNAME=\u4e0a\u6d77\u5bcc\u53cb\u8d26\u62371
-#\u4ed8\u6b3e\u65b9\u8d26\u53f7
-PAYERACCTNO=00003002203201102020000000000090
-#\u4ed8\u6b3e\u65b9\u8d26\u6237\u540d\u79f0
-PAYERACCTNAME=\u4e0a\u6d77\u5bcc\u53cb\u81ea\u6709\u8d26\u6237
-#\u865a\u62df\u8d26\u53f7
-ACCTNO=\u865a\u62df\u8d26\u53f7
-#\u865a\u62df\u8d26\u6237\u540d\u79f0
-ACCTNAME=\u865a\u62df\u8d26\u6237\u540d\u79f0
+PAYEEACCTNAME=\u6c47\u660e\u5546\u52a1\u670d\u52a1\u6709\u9650\u516c\u53f8\u5907\u4ed8\u91d1
+#PAYEEACCTNAME=\u6c47\u660e\u5546\u52a1\u670d\u52a1\u6709\u9650\u516c\u53f8\u81ea\u6709
 #ACS\u5907\u4ed8\u91d1\u5b58\u7ba1\u8d26\u53f7
-BANKNO=ACS\u5907\u4ed8\u91d1\u5b58\u7ba1\u8d26\u53f7
+BANKNO=4998421051
 
 #CVSFILE\u5730\u5740
 CVSFILE=C:\\Users\\95780\\Desktop\\201609\\
