人行入账监管

--- a/SQConsole/src/SysParam.properties
+++ b/SQConsole/src/SysParam.properties
@@ -142,6 +142,18 @@ PAYEEACCTNAME=\u6c47\u660e\u5546\u52a1\u670d\u52a1\u6709\u9650\u516c\u53f8\u5907
 #PAYEEACCTNAME=\u6c47\u660e\u5546\u52a1\u670d\u52a1\u6709\u9650\u516c\u53f8\u81ea\u6709
 #ACS\u5907\u4ed8\u91d1\u5b58\u7ba1\u8d26\u53f7
 BANKNO=4998421051
+#\u4ed8\u6b3e\u65b9\u8d26\u53f7
+PAYERACCTNO=0000300000000349
+#PAYEEACCTNO=0000300000000348
+#\u4ed8\u6b3e\u65b9\u8d26\u6237\u540d\u79f0
+PAYERACCTNAME=\u6c47\u660e\u5546\u52a1\u670d\u52a1\u6709\u9650\u516c\u53f8\u5907\u4ed8\u91d1
+#\u865a\u62df\u8d26\u53f7
+ACCTNO=0000300000000349
+
+#\u4eba\u884c\u76d1\u7ba1\u5165\u8d26
+HDIP=10.47.116.203
+HDPORT=8882
+
 
 #CVSFILE\u5730\u5740
 CVSFILE=C:\\Users\\95780\\Desktop\\201609\\
