--- a/SQConsole/src/fsas_sdk.properties
+++ b/SQConsole/src/fsas_sdk.properties
@@ -17,7 +17,7 @@ fsassdk.ifValidateRemoteCert=false
 #\u540e\u53f0\u901a\u77e5\u5730\u5740\uff0c\u586b\u5199\u7528\u6237\u63a5\u6536\u94f6\u8054\u540e\u53f0\u901a\u77e5\u7684\u5730\u5740\uff0c\u5fc5\u987b\u5916\u7f51\u80fd\u8bbf\u95ee
 #fsassdk.backUrl=http://222.222.222.222:8080/Sample_FundSettlement/backRcvResponse
 #fsassdk.backUrl=https://shmgr.chexiangpre.com/SQConsole/backRcvResponse.asp
-fsassdk.backUrl=http://zxwgwh.natappfree.cc/SQConsole/backRcvResponse.asp
+fsassdk.backUrl=http://nf5rtt.natappfree.cc/SQConsole/backRcvResponse.asp
 
 #\u524d\u53f0\u901a\u77e5\u5730\u5740\uff0c\u586b\u5199\u63a5\u6536\u94f6\u8054\u524d\u53f0\u901a\u77e5\u7684\u5730\u5740\uff0c\u5fc5\u987b\u5916\u7f51\u80fd\u8bbf\u95ee
 fsassdk.frontUrl=http://localhost:8080/Sample_FundSettlement/frontRcvResponse
