强制密码修改

--- a/SQConsole/src/SysParam.properties
+++ b/SQConsole/src/SysParam.properties
@@ -24,7 +24,10 @@ HANGCODE=('1101','1091')
 IP=10.100.163.110
 IPS_ABC_MCHNO=0000000000
 MCHTPORT=19030
-OPR_PWD_OUT_DAY=360
+#\u64cd\u4f5c\u5458\u5bc6\u7801\u8fc7\u671f\u671f\u9650
+OPR_PWD_OUT_DAY=90
+OPR_PWD_OUT_DAYS=false
+
 PORT=31120
 PRODUCTION_MODE=false
 REPORT_MODEL_DIR=/report/jasper/
