--- a/SQConsole/src/blackListandriskgrade.properties
+++ b/SQConsole/src/blackListandriskgrade.properties
@@ -1,2 +1,4 @@
+#riskGradeURL=http://10.32.173.105:8080/interface/customerRiskSearch.do   
+#blackListRUL=http://10.32.173.105:8080/interface/watchListSearch.do
 riskGradeURL=http://10.119.27.112:8080/interface/customerRiskSearch.do   
 blackListRUL=http://10.119.27.112:8080/interface/watchListSearch.do
