--- a/SpringCloud_EurekaServer/src/main/resources/application.yml
+++ b/SpringCloud_EurekaServer/src/main/resources/application.yml
@@ -5,7 +5,7 @@ eureka:
   instance:
     hostname: localhost
     client:
-      registerWithEureka: false
-      fetchRegistry: false
+      registerWithEureka: false  #表明自己是一个eureka server
+      fetchRegistry: false  #表明自己是一个eureka server
       serviceUrl:
         defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
