--- a/SpringCloud_ConfigClient/pom.xml
+++ b/SpringCloud_ConfigClient/pom.xml
@@ -27,6 +27,11 @@
   </properties>
 
   <dependencies>
+  
+   	<dependency>
+        <groupId>org.springframework.cloud</groupId>
+        <artifactId>spring-cloud-starter-eureka</artifactId>
+    </dependency>
     
     <dependency>
       <groupId>org.springframework.cloud</groupId>
